# fps-monitor-win

./: BUILDING.md  CMakeLists.txt  FPSOverlay.rc  README.md  add_defender_exclusion.bat  build.bat  config.ini  demo_menu.md  test_fps_overlay  test_launch.bat  test_menu.bat
.github/workflows/: build-release.yml
include/: common.h  config_manager.h  fps_overlay.h  hook_manager.h  menu_manager.h  renderer.h  utils.h
src/: config_manager.cpp  fps_overlay.cpp  hook_manager.cpp  main.cpp  menu_manager.cpp  renderer.cpp  utils.cpp
